Content-Editor changes

--- a/_posts/2017-07-06-register.md
+++ b/_posts/2017-07-06-register.md
@@ -5,9 +5,9 @@ color: black
 ---
 
 # Register
-Please send the project proposals at the address: brainhackwarsaw@gmail.com before 01.09.2017.
 
-Registration  for participants who doesn't submit any projects will start in September and it will last until 01.11.2017.
+Please send the project proposals before 01.09.2017 to the mailing address: brainhackwarsaw@gmail.com 
 
+Registration for project participants will start in September and it will last until 01.11.2017.
 
-Alo join our channel (#brainhack_warsaw2017) at  the [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) project for updated information on the developing Hackathon content and to contribute your own ideas.
+Also, please team up with us! Join our channel (#brainhack_warsaw2017) at  the [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) project for updated information on the developing Hackathon content and to contribute your own ideas.
