--- a/_posts/2017-07-09-about.md
+++ b/_posts/2017-07-09-about.md
@@ -10,9 +10,9 @@ navigation_weight: 2
 
 The AoN Brainhack Warsaw 2017 committee:
 
-* Natalia Bielczyk, MSc (Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, Nijmegen, The Netherlands) [<i	 class="fa fa-github"></i>](http://ewan-klein.github.io) [<i class="fa fa-twitter"></i>](https://twitter.com/	nataliabielczyk)
-* Krzysztof Bielski (Faculty of Psychology, University of Warsaw, Warsaw, Poland)
-* Daniel Borek, (Faculty of Physics, University of Warsaw, Warsaw, Poland) [<i class="fa fa-github"></i>](http://danieltomasz.github.io)  [<i class="fa fa-twitter"></i>](https://twitter.com/danieltomasz)
+* [Natalia Bielczyk](https://www.nataliabielczyk.com/), MSc (Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, Nijmegen, The Netherlands) [<i class="fa fa-twitter"></i>](https://twitter.com/nataliabielczyk)
+* Krzysztof Bielski (Faculty of Psychology, University of Warsaw, Warsaw, Poland) [<i class="fa fa-twitter"></i>](https://twitter.com/KrzysztofBiels1)
+* Daniel Borek, (Faculty of Physics, University of Warsaw, Warsaw, Poland) [<i class="fa fa-github"></i>](https://github.com/danieltomasz)  [<i class="fa fa-twitter"></i>](https://twitter.com/danieltomasz)
 * Michał Bola, PhD (Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, Warsaw, Poland)
 * Beata Goźlińska (Faculty of Physics, University of Warsaw, Warsaw, Poland)
 
