--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -6,13 +6,15 @@ color: black
 # Projects
 
 At the moment, **the call for project proposals is open**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome. 
-Two exemplary projects which will take place at this event, are listed below:
+Two exemplary [projects](#project1) which will take place at this event, are listed below:
+
+
 
 ---
 
 
 
-## Project 1: Functional connectivity research: can we find a common ground? 
+## <a id="project1"></a> Project 1: Functional connectivity research: can we find a common ground? 
 
 ### Author: Natalia Bielczyk, MSc
 
