better email hyperlink

--- a/_posts/2017-07-02-home.md
+++ b/_posts/2017-07-02-home.md
@@ -18,7 +18,7 @@ Please note this Brainhack is a satellite event for the interdiscplinary [Aspect
 
 **Deadline for participant registration**:               01.11.2017
 
-Please send the project proposals and all the related questions at the address: brainhackwarsaw@gmail.com
+Please send the project proposals and all the related questions at the address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 
 
