--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -57,8 +57,8 @@ Is there a plan for extending this work to a paper in case the results are promi
 
 
 ---
-
-## <a id="trypophobia"></a> Project 2: Detecting trypophobia triggers 
+<a id="trypophobia"></a> 
+## Project 2: Detecting trypophobia triggers 
 
 ### Author: Piotr Migdał, PhD
 
