--- a/_posts/2017-07-06-register.md
+++ b/_posts/2017-07-06-register.md
@@ -6,8 +6,8 @@ color: black
 
 # Register
 
-Please send the project proposals before 01.09.2017 to the mailing address: brainhackwarsaw@gmail.com 
-
+Please send the project proposals before 01.09.2017 to the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+ 
 Registration for project participants will start in September and it will last until 01.11.2017.
 
 Also, please team up with us! Join our channel (#brainhack_warsaw2017) at  the [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) project for updated information on the developing Hackathon content and to contribute your own ideas.
