--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -6,9 +6,18 @@ color: black
 # Projects
 
 At the moment, **the call for project proposals is open**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome. 
+
+**A project proposal should contain**:
+* a title 
+* a list of authors / mentors / supervisors
+* an abstract 
+* a list of 1-5 key papers / online materials summarising the subject (which the participants should become familiar with before starting the project)
+* a list of requirements for taking part in the project (education level / English level / programming language required)
+* a maximal number of participants on the project
+* what participants gain / learn from the project?
+* can the project be extended to a peer-reviewed paper if the results are promising?
+
 Two exemplary projects which will take place at this event, are listed below:
-
-
 
 ---
 
