--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -28,7 +28,7 @@ Two exemplary projects which will take place at this event, are listed below:
 ### Author: Natalia Bielczyk, MSc
 
 ### Senior supervisor: Michał Bola, PhD 
-Abstract: Functional connectivity (FC) research has become one of the leading concepts used for characterising network dynamics across multiple disciplines, from neuroimaging, through gene expression networks, to social networks. It is also a basis for graph theoretical biomarkers of psychiatric disorders and as such, it become an important subfield of cognitive neuroimaging. 
+**Abstract**: Functional connectivity (FC) research has become one of the leading concepts used for characterising network dynamics across multiple disciplines, from neuroimaging, through gene expression networks, to social networks. It is also a basis for graph theoretical biomarkers of psychiatric disorders and as such, it become an important subfield of cognitive neuroimaging. 
 
 FC is usually operationalised by means of Pearson’s and partial correlation, however the implementation of FC can vary between different fields, and different applications. Then, there is a question: does an optimal method to quantify functional connectivity exist? Or is the choice dependent on the data properties? How to choose the right method? In this project, we will use open-access data from functional Magnetic Resonance Imaging, EEG, gene expression data, stock exchange data and a few other open-access datasets, and we will compare the leading methods for computing FC when applied to these datasets. 
 
@@ -36,9 +36,8 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 
 
-### A list of 1-5 key papers/materials summarising the subject: 
+**A list of 1-5 key papers/materials summarising the subject**: 
 <ol type="a">
-
 <li> http://www.scholarpedia.org/article/Brain_connectivity</li> 
 <li>http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full </li> 
 <li> A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 </li> 
@@ -49,20 +48,20 @@ We will attempt to answer the questions: what are the pros and cons of different
 *Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
 
-A list of requirements for taking part in the project (education level / English level / programming language required): 
+**A list of requirements for taking part in the project** (education level / English level / programming language required): 
 * BSc program, or higher 
 * English: good, not necessarily proficient 
 *  programming languages / other competences: basics of Matlab, Python, LaTeX, basic statistics
  
-**A maximal number of participants: 8** 
+**A maximal number of participants**: 8 
 
-Skills and competences you can learn during the project: 
+**Skills and competences you can learn during the project**: 
 *  looking for parallels in the datasets from different disciplines, representing the datasets with a model 
 * group project planning (we will discuss and divide tasks on the site) 
 *  programming in a team, solving problems in parallel 
 *  scientific writing (at least one paragraph per participant) 
 
-Is there a plan for extending this work to a paper in case the results are promising? **yes** 
+**Is there a plan for extending this work to a paper in case the results are promising?** Yes 
 
 
 ---
@@ -72,7 +71,7 @@ Is there a plan for extending this work to a paper in case the results are promi
 ### Author: Piotr Migdał, PhD
 
 
-Trypophobia is a phobia of irregular patterns or clusters of small holes or bumps. It may arise from the sense of aversion towards skin infection with maggots or fungi. In general, this phenomenon is adaptive, because a strong sense of disgust may protect against touching infected humans, animals or corpses. Yet, it can also become maladaptive if some, otherwise benign, patterns cause a strong aversive response. During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. Such networks are a state of the art technique for visual pattern detection.
+**Abstract**:Trypophobia is a phobia of irregular patterns or clusters of small holes or bumps. It may arise from the sense of aversion towards skin infection with maggots or fungi. In general, this phenomenon is adaptive, because a strong sense of disgust may protect against touching infected humans, animals or corpses. Yet, it can also become maladaptive if some, otherwise benign, patterns cause a strong aversive response. During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. Such networks are a state of the art technique for visual pattern detection.
 
 The goal of the project is twofold:
 
@@ -97,11 +96,11 @@ If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teac
 *  English: good, not necessarily proficient 
 * programming languages / other competences: at least basics of Python (we will create a neural network in either Keras or PyTorch, modern frameworks for deep learning)
 
-**A maximal number of participants: 6 (1-2 per computer)**
+**A maximal number of participants**: 6 (1-2 per computer)
 
-Skills and competences you can learn during the project: 
+**Skills and competences you can learn during the project**: 
 * practical experience with deep learning for image classification
 * insights into how artificial neural networks abstract visual information processing
 
-Is there a plan for extending this work to a paper in case the results are promising? **Yes**
+**Is there a plan for extending this work to a paper in case the results are promising?** Yes
 
