--- a/_posts/2017-07-02-home.md
+++ b/_posts/2017-07-02-home.md
@@ -7,9 +7,9 @@ color: black
 # The call for proposals for the AoN Brainhack Warsaw 2017 is now open!
 
 
-On the weekend of **18-19th November 2017**, the first edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on neuroscience-related projects. 
+On the weekend of **18-19th November 2017**, the first edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**. 
 
-The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [Craddock et al., 2016](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
+The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
 
 Please note AoN Brainhack Warsaw 2017 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 24-26th November 2017 in Warsaw. 
 Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
