poprawki od Natalii

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -34,7 +34,8 @@ FC is usually operationalised by means of Pearson’s and partial correlation, h
 
 We will attempt to answer the questions: what are the pros and cons of different methods for quantifying FC? What are the differences and the similarities between different datasets, and how to choose the right method for the given dataset? 
 
-
+![image-title-here](/img/projekt1.png){:class="img-responsive"}
+*Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
 **A list of 1-5 key papers/materials summarising the subject**: 
 <ol type="a">
@@ -43,10 +44,6 @@ We will attempt to answer the questions: what are the pros and cons of different
 <li> A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 </li> 
 <li>M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 </li> 
 </ol>
-
-![image-title-here](/img/projekt1.png){:class="img-responsive"}
-*Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
-
 
 **A list of requirements for taking part in the project** (education level / English level / programming language required): 
 * BSc program, or higher 
@@ -63,7 +60,6 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 **Is there a plan for extending this work to a paper in case the results are promising?** Yes 
 
-
 ---
 <a id="trypophobia"></a> 
 ## Project 2: Detecting trypophobia triggers 
@@ -78,18 +74,20 @@ The goal of the project is twofold:
 - provide a tool to filter or censor triggering images while browsing the Internet
 - empirically explore which patterns contribute to this phenomenon, and potentially relate the results to analogous regions in the human visual cortex
 
-We will provide the data for this project. The initial results are promising, see [git repo](https://github.com/grzegorz225/trypophobia-detector). 
-
-**A list of 1-5 key papers/materials summarising the subject**: 
-In this case, only the basic knowledge of trypophobia is required. An additional knowledge may help with giving a general context, but most likely won’t contribute to the solution during this event:
-1.[https://en.wikipedia.org/wiki/Trypophobia](https://en.wikipedia.org/wiki/Trypophobia)
-2. [https://www.reddit.com/r/trypophobia/](https://www.reddit.com/r/trypophobia/) (warning: triggers)
-
-Additionally, take a look at [http://p.migdal.pl/2017/04/30/teaching-deep-learning.html](http://p.migdal.pl/2017/04/30/teaching-deep-learning.html) 
-If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teaching/python/book.html)  may be relevant
+We will provide the data for this project. The initial results are promising, see [this git repo](https://github.com/grzegorz225/trypophobia-detector). 
 
 ![image-title-here](/img/projekt2.jpg){:class="img-responsive"}
 *Fig: The holes in lotus seed heads cause some anxiety in some people (source: Wikipedia)*
+
+**A list of 1-5 key papers/materials summarising the subject**: 
+
+In this case, only the basic knowledge of trypophobia is required. An additional knowledge may help with giving a general context, but most likely won’t contribute to the solution during this event:
+1. [https://en.wikipedia.org/wiki/Trypophobia](https://en.wikipedia.org/wiki/Trypophobia)
+2. [https://www.reddit.com/r/trypophobia/](https://www.reddit.com/r/trypophobia/) (warning: triggers)
+
+Additionally, take a look at [http://p.migdal.pl/2017/04/30/teaching-deep-learning.html](http://p.migdal.pl/2017/04/30/teaching-deep-learning.html).
+If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teaching/python/book.html)  may be relevant.
+
 
 **A list of requirements for taking part in the project** (education level / English level / programming language required): 
 * BSc program, or higher 
