--- a/_posts/2017-07-09-about.md
+++ b/_posts/2017-07-09-about.md
@@ -13,7 +13,7 @@ The AoN Brainhack Warsaw 2017 committee:
 * [Natalia Bielczyk](https://www.nataliabielczyk.com/), MSc (Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, Nijmegen, The Netherlands) [<i class="fa fa-twitter"></i>](https://twitter.com/nataliabielczyk)
 * Krzysztof Bielski (Faculty of Psychology, University of Warsaw, Warsaw, Poland) [<i class="fa fa-twitter"></i>](https://twitter.com/KrzysztofBiels1)
 * Michał Bola, PhD (Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, Warsaw, Poland)
-* Daniel Borek (Faculty of Physics, University of Warsaw, Warsaw, Poland) [<i class="fa fa-github"></i>](https://github.com/danieltomasz)  [<i class="fa fa-twitter"></i>](https://twitter.com/danieltomasz)
+* <a id="borek"></a> Daniel Borek (Faculty of Physics, University of Warsaw, Warsaw, Poland) [<i class="fa fa-github"></i>](https://github.com/danieltomasz)  [<i class="fa fa-twitter"></i>](https://twitter.com/danieltomasz)
 * Beata Goźlińska (Faculty of Physics, University of Warsaw, Warsaw, Poland)
 
 
