poprawki od Natalii

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -7,7 +7,7 @@ color: black
 
 At the moment, **the call for project proposals is open**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome. 
 
-**A project proposal should contain**:
+**A project proposal should contain the following points:**
 * a title 
 * a list of authors / mentors / supervisors
 * an abstract 
