--- a/_posts/2017-07-02-home.md
+++ b/_posts/2017-07-02-home.md
@@ -1,7 +1,7 @@
 ---
 title: Home
 bg: turquoise
-color: black
+color: white
 ---
 	
 # The call for proposals for the AoN Brainhack Warsaw 2017 is now open!
