--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -8,14 +8,14 @@ color: white
 At the moment, **the call for project proposals is open**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome. 
 
 **A project proposal should contain the following points:**
-* a title 
-* a list of authors / mentors / supervisors
-* an abstract 
-* a list of 1-5 key papers / online materials summarising the subject (which the participants should become familiar with before starting the project)
-* a list of requirements for taking part in the project (education level / English level / programming language required)
-* a maximal number of participants on the project
-* what participants gain / learn from the project?
-* can the project be extended to a peer-reviewed paper if the results are promising?
+1. a title, 
+2. a list of authors / mentors / supervisors,
+3. an abstract,
+4. a list of 1-5 key papers / online materials summarising the subject (which the participants should become familiar with before starting the project),
+5. a list of requirements for taking part in the project (education level / English level / programming language required),
+6. a maximal number of participants on the project,
+7. what participants gain / learn from the project?,
+8. can the project be extended to a peer-reviewed paper if the results are promising?
 
 Two exemplary projects which will take place at this event, are listed below:
 
