--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -45,18 +45,22 @@ We will attempt to answer the questions: what are the pros and cons of different
 <li>M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 </li> 
 </ol>
 
+
 **A list of requirements for taking part in the project** (education level / English level / programming language required): 
-* BSc program, or higher 
-* English: good, not necessarily proficient 
-*  programming languages / other competences: basics of Matlab, Python, LaTeX, basic statistics
+1. BSc program, or higher 
+2. English: good, not necessarily proficient 
+3.  programming languages / other competences: basics of Matlab, Python, LaTeX, basic statistics
  
 **A maximal number of participants**: 8 
 
 **Skills and competences you can learn during the project**: 
-*  looking for parallels in the datasets from different disciplines, representing the datasets with a model 
-* group project planning (we will discuss and divide tasks on the site) 
-*  programming in a team, solving problems in parallel 
-*  scientific writing (at least one paragraph per participant) 
+
+
+1. looking for parallels in the datasets from different disciplines, representing the datasets with a model 
+2. group project planning (we will discuss and divide tasks on the site) 
+3.  programming in a team, solving problems in parallel 
+4.  scientific writing (at least one paragraph per participant) 
+
 
 **Is there a plan for extending this work to a paper in case the results are promising?** Yes 
 
@@ -90,15 +94,15 @@ If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teac
 
 
 **A list of requirements for taking part in the project** (education level / English level / programming language required): 
-* BSc program, or higher 
-*  English: good, not necessarily proficient 
-* programming languages / other competences: at least basics of Python (we will create a neural network in either Keras or PyTorch, modern frameworks for deep learning)
+1. BSc program, or higher 
+2.  English: good, not necessarily proficient 
+3. programming languages / other competences: at least basics of Python (we will create a neural network in either Keras or PyTorch, modern frameworks for deep learning)
 
 **A maximal number of participants**: 6 (1-2 per computer)
 
 **Skills and competences you can learn during the project**: 
-* practical experience with deep learning for image classification
-* insights into how artificial neural networks abstract visual information processing
+1. practical experience with deep learning for image classification
+2. insights into how artificial neural networks abstract visual information processing
 
 **Is there a plan for extending this work to a paper in case the results are promising?** Yes
 
