--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -75,8 +75,8 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 The goal of the project is twofold:
 
-- provide a tool to filter or censor triggering images while browsing the Internet
-- empirically explore which patterns contribute to this phenomenon, and potentially relate the results to analogous regions in the human visual cortex
+1. provide a tool to filter or censor triggering images while browsing the Internet
+2. empirically explore which patterns contribute to this phenomenon, and potentially relate the results to analogous regions in the human visual cortex
 
 We will provide the data for this project. The initial results are promising, see [this git repo](https://github.com/grzegorz225/trypophobia-detector). 
 
