--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -38,12 +38,12 @@ We will attempt to answer the questions: what are the pros and cons of different
 *Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
 **A list of 1-5 key papers/materials summarising the subject**: 
-<ol type="a">
-<li> http://www.scholarpedia.org/article/Brain_connectivity</li> 
-<li>http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full </li> 
-<li> A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 </li> 
-<li>M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 </li> 
-</ol>
+
+1.[http://www.scholarpedia.org/article/Brain_connectivity] (http://www.scholarpedia.org/article/Brain_connectivity)
+2. [http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full](http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full)
+3. A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 
+4. M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 
+
 
 
 **A list of requirements for taking part in the project** (education level / English level / programming language required): 
