--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -4,7 +4,7 @@ bg: amethyst
 color: white
 ---
 
-# Register
+#  Registration
 
 Please send the project proposals before 1st September  2017 to the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
  
