poprawiony hyperlink do aon

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -7,6 +7,6 @@ style: center
 
 ![codeweek](img/aon-logo.png)
 
-## Aspects of Neuroscience Conference Satellite Event
+## [Aspects of Neuroscience Conference](http://neuroaspects.org/) Satellite Event
 ### 18-19th November 2017 @  University of Warsaw
 
