--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -7,7 +7,7 @@ style: center
 
 ![codeweek](img/aon-logo.png)
 
-## [Aspects od Neuroscience conference](http://neuroaspects.org/) satellite  event
+## Aspects od Neuroscience conference satellite  event
 
 ### 18-19th November 2017 @  University of Warsaw
 
