--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -11,6 +11,8 @@ On the weekend of **18-19th November 2017**, the first edition of **AoN Brainhac
 
 The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
 
+By submitting your own, genuine research project, you can gain a priceless leadership experience as you will be able to manage a group of researchers at our two-day event.
+
 Please note AoN Brainhack Warsaw 2017 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 24-26th November 2017 in Warsaw. 
 Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
 
