--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -10,10 +10,19 @@ color: white
 
 ## The AoN Brainhack Warsaw 2017 committee:
 
+<div id="profile-container">
 {% include profile-card.html avatarurl="/img/nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
-{% include profile-card.html avatarurl="/img/bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1)"%}	
-{% include profile-card.html avatarurl="/img/michal.png" profilename="Michał Bola, PhD " affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland" researchgate="Michal_Bola"%}
+{% include profile-card.html avatarurl="/img/bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}	
+
 {% include profile-card.html avatarurl="/img/borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
 
+</div>	
 
 
+## Advisory board:
+<div id="profile-container">
+
+{% include profile-card.html avatarurl="/img/michal.png" profilename="Michał Bola, PhD " affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland"%}
+
+{% include profile-card.html avatarurl="/img/Daniel_Wojcik.png" profilename="Prof. Daniel Wójcik " affiliation="Laboratory of Neuroinformatics, Department of Neurophysiology, Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland" %}
+</div>	
