--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -9,203 +9,212 @@ color: black
 # Preliminary schedule
 
 
+{% assign color1 = '#ffffff' %}
+{% assign color2 = '#eeeeee' %}
+{% assign lecture = '#EF9A9A' %}
+{% assign presentation2 = '#72fce9' %} 
+{% assign presentation1 = '#16e6cf' %} 
+{% assign hacking1 = '#03A9F4' %} 
+{% assign hacking2 = '#81D4FA' %} 
+{% assign dinner = '#fefb66' %} 
+{% assign social = '#ff8cc5' %} 
 
 <table width="421" cellspacing="0" cellpadding="4" bgcolor="#cadfff">
 <tbody>
 <tr>
-<td bgcolor="#ffffff" width="24" height="12">&nbsp;</td>
-<td bgcolor="#ffffff" width="118">
+<td  bgcolor="{{ color1 }}"  width="24" height="12">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="118">
 <p lang="en-US"><span lang="en-US"><strong>Friday, 17th November 2017</strong></span></p>
 </td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="127">
 <p lang="en-US"><span lang="en-US"><strong>Saturday, 18th November 2017</strong></span></p>
 </td>
-<td bgcolor="#ffffff" width="119">
+<td bgcolor="{{ color1 }}" width="119">
 <p lang="en-US"><span lang="en-US"><strong>Sunday, 19th November 2017</strong></span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="24">
+<td bgcolor="{{  color2  }}" width="24" height="24">
 <p lang="en-US">9:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#ff968c" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  lecture  }}" width="127">
 <p lang="en-US"><span lang="en-US">ignite talk: Michael Hanke</span></p>
 <p lang="en-US"><span lang="en-US"><em>Doing open science for your own benefit</em></span></p>
 </td>
-<td bgcolor="#eeeeee" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">10:00</p>
 </td>
-<td bgcolor="#ffffff" width="118">&nbsp;</td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ffffff" width="119">
+<td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="5">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">11:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#eeeeee" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#eeeeee" width="119">
+<td bgcolor="{{  hacking2  }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">12:00</p>
 </td>
-<td bgcolor="#ffffff" width="118">&nbsp;</td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ffffff" width="119">
+<td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="5">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">13:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#fefb66" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">lunch</span></p>
 </td>
-<td bgcolor="#fefb66" width="119">
+<td bgcolor="{{  dinner }}" width="119">
 <p lang="en-US"><span lang="en-US">lunch</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">14:00</p>
 </td>
-<td bgcolor="#ffffff" width="118">&nbsp;</td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ffffff" width="119">
+<td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="5">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">15:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#eeeeee" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#eeeeee" width="119">
+<td bgcolor="{{  hacking2  }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
-<td bgcolor="#ffffff" width="118">&nbsp;</td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ffffff" width="119">
+<td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="38">
+<td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">17:00</p>
 </td>
-<td bgcolor="#fefb66" width="118">
+<td bgcolor="{{  dinner }}" width="118">
 <p lang="en-US"><span lang="en-US">opening, welcome drinks</span></p>
 </td>
-<td bgcolor="#ff968c" width="127">
+<td bgcolor="{{  lecture  }}" width="127">
 <p lang="en-US"><span lang="en-US">tea-time talk: Charl Linssen</span></p>
 <p><span lang="en-US"><em>Convergence between artificial intelligence and simulation of the brain: from theory to github</em></span></p>
 </td>
-<td bgcolor="#16e6cf" width="119">
+<td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="13">
+<td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">18:00</p>
 </td>
-<td bgcolor="#72fce9" width="118">
+<td bgcolor="{{  presentation1  }}" width="118">
 <p lang="en-US"><span lang="en-US">presentations by partnering institutions</span></p>
 </td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#72fce9" width="119">
+<td bgcolor="{{  presentation1  }}" width="119">
 <p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="38">
+<td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">19:00</p>
 </td>
-<td bgcolor="#16e6cf" width="118">
+<td bgcolor="{{  presentation2  }}" width="118">
 <p lang="en-US"><span lang="en-US">5min blitz project opening presentations</span></p>
 </td>
-<td bgcolor="#eeeeee" width="127">
+<td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ff968c" width="119">
+<td bgcolor="{{  lecture  }}" width="119">
 <p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
 <p><span lang="en-US"><em>Shooting for the stars: Moving from reproducible to open research</em></span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="13">
+<td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">20:00</p>
 </td>
-<td bgcolor="#ff8cc5" width="118">
+<td bgcolor="{{  social  }}" width="118">
 <p lang="en-US"><span lang="en-US">a small excursion together to Warsaw downtown</span></p>
 </td>
-<td bgcolor="#fefb66" width="127">
+<td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">dinner</span></p>
 </td>
-<td bgcolor="#fefb66" width="119">
+<td bgcolor="{{  dinner }}" width="119">
 <p lang="en-US"><span lang="en-US">goodbye drinks</span></p>
 </td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="5">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#eeeeee" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#eeeeee" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 <tr>
-<td bgcolor="#ffffff" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
 </td>
-<td bgcolor="#ffffff" width="118">&nbsp;</td>
-<td bgcolor="#ffffff" width="127">
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="#ffffff" width="119">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
 </tr>
 <tr>
-<td bgcolor="#eeeeee" width="24" height="4">
+<td bgcolor="{{  color2  }}" width="24" height="4">
 <p lang="en-US">23:00</p>
 </td>
-<td bgcolor="#eeeeee" width="118">&nbsp;</td>
-<td bgcolor="#ff8cc5" width="127">
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  social  }}" width="127">
 <p lang="en-US"><span lang="en-US">late-night social (details t.b.a.)</span></p>
 </td>
-<td bgcolor="#eeeeee" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 </tbody>
 </table>	
