--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -1,7 +1,7 @@
 ---
 title: "schedule"
 bg: white
-color: black	
+color: black
 
 
 ---
@@ -12,12 +12,13 @@ color: black
 {% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
 {% assign lecture = '#EF9A9A' %}
-{% assign presentation2 = '#72fce9' %} 
-{% assign presentation1 = '#16e6cf' %} 
-{% assign hacking1 = '#03A9F4' %} 
-{% assign hacking2 = '#81D4FA' %} 
-{% assign dinner = '#fefb66' %} 
-{% assign social = '#ff8cc5' %} 
+{% assign presentation2 = '#72fce9' %}
+{% assign presentation1 = '#16e6cf' %}
+{% assign hacking1 = '#03A9F4' %}
+{% assign hacking2 = '#81D4FA' %}
+{% assign dinner = '#F4FF81' %}
+{% assign social = '#CE93D8' %}
+
 
 <table width="421" cellspacing="0" cellpadding="4" bgcolor="#cadfff">
 <tbody>
@@ -33,17 +34,19 @@ color: black
 <p lang="en-US"><span lang="en-US"><strong>Sunday, 19th November 2017</strong></span></p>
 </td>
 </tr>
+
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="24">
 <p lang="en-US">9:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  lecture  }}" width="127">
-<p lang="en-US"><span lang="en-US">ignite talk: Michael Hanke</span></p>
-<p lang="en-US"><span lang="en-US"><em>Doing open science for your own benefit</em></span></p>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">brain hacking</span></p></td>
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">10:00</p>
@@ -56,6 +59,7 @@ color: black
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">11:00</p>
@@ -73,12 +77,13 @@ color: black
 <p lang="en-US">12:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
-</td>
+<td bgcolor="{{  lecture  }}" width="127">
+<p lang="en-US"><span lang="en-US">ignite talk: Michael Hanke</span></p>
+<p lang="en-US"><span lang="en-US"><em>Doing open science for your own benefit</em></span></p></td>
 <td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
+
 </tr>
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
@@ -100,8 +105,8 @@ color: black
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<td bgcolor="{{ presentation1 }}" width="119">
+<p lang="en-US"><span lang="en-US">preparing final presentations</span></p>
 </td>
 </tr>
 <tr>
@@ -112,8 +117,8 @@ color: black
 <td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<td bgcolor="{{  presentation2  }}" width="119">
+<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
 </td>
 </tr>
 <tr>
@@ -124,8 +129,8 @@ color: black
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<td bgcolor="{{  presentation1  }}" width="119">
+<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
 </td>
 </tr>
 <tr>
@@ -139,8 +144,9 @@ color: black
 <p lang="en-US"><span lang="en-US">tea-time talk: Charl Linssen</span></p>
 <p><span lang="en-US"><em>Convergence between artificial intelligence and simulation of the brain: from theory to github</em></span></p>
 </td>
-<td bgcolor="{{  presentation2  }}" width="119">
-<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
+<td bgcolor="{{  lecture  }}" width="119">
+<p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
+<p><span lang="en-US"><em>Shooting for the stars: Moving from reproducible to open research</em></span></p>
 </td>
 </tr>
 <tr>
@@ -153,8 +159,8 @@ color: black
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{  presentation1  }}" width="119">
-<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
+<td bgcolor="{{  dinner }}" width="119">
+<p lang="en-US"><span lang="en-US">goodbye drinks</span></p>
 </td>
 </tr>
 <tr>
@@ -167,10 +173,8 @@ color: black
 <td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
-<td bgcolor="{{  lecture  }}" width="119">
-<p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
-<p><span lang="en-US"><em>Shooting for the stars: Moving from reproducible to open research</em></span></p>
-</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+
 </tr>
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="13">
@@ -182,9 +186,8 @@ color: black
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">dinner</span></p>
 </td>
-<td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">goodbye drinks</span></p>
-</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
+
 </tr>
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
@@ -216,5 +219,6 @@ color: black
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
+
 </tbody>
-</table>	
+</table>
