--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -17,7 +17,7 @@ color: black
 {% assign hacking1 = '#03A9F4' %}
 {% assign hacking2 = '#81D4FA' %}
 {% assign dinner = '#F4FF81' %}
-{% assign social = '#CE93D8' %}
+{% assign social = '#B39DDB' %}
 
 
 <table width="421" cellspacing="0" cellpadding="4" bgcolor="#cadfff">
