--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -79,7 +79,7 @@ color: black
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{  lecture  }}" width="127">
 <p lang="en-US"><span lang="en-US">ignite talk: Michael Hanke</span></p>
-<p lang="en-US"><span lang="en-US"><em>Doing open science for your own benefit</em></span></p></td>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#hanke">Doing open science for your own benefit</a></em></span></p></td>
 <td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
@@ -142,11 +142,11 @@ color: black
 </td>
 <td bgcolor="{{  lecture  }}" width="127">
 <p lang="en-US"><span lang="en-US">tea-time talk: Charl Linssen</span></p>
-<p><span lang="en-US"><em>Convergence between artificial intelligence and simulation of the brain: from theory to github</em></span></p>
+<p><span lang="en-US"><em><a href="{{ url }}index.html#charl">Convergence between artificial intelligence and simulation of the brain: from theory to github</a></em></span></p>
 </td>
 <td bgcolor="{{  lecture  }}" width="119">
 <p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
-<p><span lang="en-US"><em>Shooting for the stars: Moving from reproducible to open research</em></span></p>
+<p><span lang="en-US"><em><a href="{{ url }}index.html#kirstie">Shooting for the stars: Moving from reproducible to open research</a></em></span></p>
 </td>
 </tr>
 <tr>
