--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -7,7 +7,7 @@ color: white
 
 <a name="hanke"></a>
 
-{% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD " title="Doing open science for your own benefit"  affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität, Magdeburg, Germany"%}
+{% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD " title="Doing open science for your own benefit" homepage="http://psychoinformatics.de/" affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität, Magdeburg, Germany"%}
 
 **Abstract:** Everyday cognition involves a large variety of concurrent neural processes that handle an incredible amount of sensory inputs in order to generate appropriate responses when interacting with the environment. It can be argued that studying any of these aspects of cognition in isolation, as it is often the case in feature-deprived laboratory experiments, yields an over-simplified or over-specialized understanding of the true nature of brain function. In order to fully understand “how the brain works”, it is essential to study the complex inter-play of cognitive processes in a rich natural environment and go beyond the
 localization of individual aspects of brain function. I will outline a strategy to approach this herculean task that is based on the core principles of open-science and aims to enable collaboration between research groups and disciplines.
@@ -18,7 +18,7 @@ Michael obtained his PhD in 2009 from Institute of Psychology, Otto-von-Guericke
 
 
 <a name="kirstie"></a>
-{% include speaker-card.html avatarurl="kirstie.png" profilename="Kirstie Whitaker, PhD "  title="Shooting for the stars: Moving from reproducible to open research"  affiliation="Brain Mapping Unit, Department of Psychiatry, University of Cambridge" %}
+{% include speaker-card.html avatarurl="kirstie.png" profilename="Kirstie Whitaker, PhD "  title="Shooting for the stars: Moving from reproducible to open research" homepage="https://whitakerlab.github.io" affiliation="Brain Mapping Unit, Department of Psychiatry, University of Cambridge" %}
 **Abstract:**
 This talk will discuss the perceived and actual barriers experienced by researchers attempting to do reproducible research in neuroscience, and give practical guidance on how they can be overcome. It will include suggestions on how to make your code and data available and usable for others (including a strong suggestion to document both clearly so you don’t have to reply to lots of email questions from future users). However, as this is a Brainhack event, Dr Whitaker will push you further: to consider working openly. Open research is an important step in changing an academic reward system from its current focus on individual contributions and “getting there first” to sharing work as it is being created and allowing collaborators to contribute from the start. All the AoN Brainhack Warsaw participants will leave knowing there is something they can do to step towards making their research reproducible, and hopefully a few will be inspired to make more radical changes.
 
