--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -7,7 +7,7 @@ color: white
 
 <a name="hanke"></a>
 
-{% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD " title="Doing open science for your own benefit" homepage="http://psychoinformatics.de/" affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität, Magdeburg, Germany"%}
+{% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD " title="Doing open science for your own benefit" homepage="http://psychoinformatics.de/" affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität,<br> Magdeburg, Germany"%}
 
 **Abstract:** Everyday cognition involves a large variety of concurrent neural processes that handle an incredible amount of sensory inputs in order to generate appropriate responses when interacting with the environment. It can be argued that studying any of these aspects of cognition in isolation, as it is often the case in feature-deprived laboratory experiments, yields an over-simplified or over-specialized understanding of the true nature of brain function. In order to fully understand “how the brain works”, it is essential to study the complex inter-play of cognitive processes in a rich natural environment and go beyond the
 localization of individual aspects of brain function. I will outline a strategy to approach this herculean task that is based on the core principles of open-science and aims to enable collaboration between research groups and disciplines.
@@ -28,7 +28,7 @@ Kirstie is a Research Fellow at The Alan Turing Institute (London, UK). She comp
 
 
 <a name="charl"></a>
-{% include speaker-card.html avatarurl="charl.png" profilename=" Charl Linssen, PhD candidate " title="Convergence between artificial intelligence and simulation of the brain: from theory to GitHub" affiliation="The Tiesinga group, Department of Neuroinformatics, Donders Institute for Brain, Cognition and Behaviour, Nijmegen, the Netherlands"%}
+{% include speaker-card.html avatarurl="charl.png" profilename=" Charl Linssen, PhD candidate " title="Convergence between artificial intelligence and simulation of the brain: from theory to GitHub" affiliation="The Tiesinga group, Department of Neuroinformatics, Donders Institute for Brain, Cognition and Behaviour,<br> Nijmegen, the Netherlands"%}
 **Abstract:** Artificial neural networks have received a recent spur in attention after notable successes in diverse areas: computer vision, motor control, natural language processing, as agents in computer and board games, and many others. Computer simulation of neural networks has been around since the late 1950s, but recent successes rely both on better knowledge of how to design and train these networks, as well as increases in scale made possible by increased computational power and the availability of large training datasets ("big data").
 
 For a neuroscientist, neural network simulation can be of interest from two different points of view: in the theoretical sense, as a model of how real brains work, or in the empirical sense, as a tool that analyses a dataset or performs a certain task (as in the game playing agent). These objectives may not be mutually exclusive, but depending on the application or goal, a researcher has to make concrete decisions about what model to use to approach it.
