--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -146,7 +146,7 @@ color: black
 </td>
 <td bgcolor="{{  lecture  }}" width="119">
 <p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
-<p><span lang="en-US"><em><a href="{{ url }}index.html#kirstie">Shooting for the stars: Moving from reproducible to open research</a></em></span></p>
+<p><span lang="en-US"><em><a href="{{ url }}index.html#kirstie">Shooting for the stars: Moving from reproducible to open research (skype talk)</a></em></span></p>
 </td>
 </tr>
 <tr>
