--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -201,7 +201,7 @@ We believe that in case of success this project can provide information about th
 
 ![image-title-here](/img/projects/imdb.png?style=centerme){:class="img-responsive" height="100%" width="100%" align="center"}
 
-*Fig. The Internet Movie Database (abbreviated IMDb) front page.*
+*Fig. The Internet Movie Database front page.*
 
 
 **A list of 1-5 key papers/materials summarising the subject:**
@@ -344,7 +344,7 @@ Finally, participants will be asked to consider ways of interpreting the feature
 
 ![image-title-here](/img/projects/project7.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig. Correlation matrix.*
+*Fig. Similarity matrix of ~1700 images.*
 
 **A list of 1-5 key papers summarising the subject:**
 1. Cole JH, Poudel RPK, Tsagkrasoulis D, et al. Predicting brain age with deep learning from raw imaging data results in a reliable and heritable biomarker. NeuroImage 2017. doi: 10.1016/j.neuroimage.2017.07.059
