--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -238,20 +238,18 @@ Polarized light imaging (PLI) as well as the tractography of high angular resolu
 * fibres are sticky, which makes them aggregate in bundles of similar orientation.
 How much of a real brain connectome would be recovered by such a simple and reductionistic model?
 
-We propose to approach this question in the simple case of a 2D coronal slice. We use methods inspired by swarm intelligence[[^2]], and simulate a dynamical system where particles are instantiated at the gray matter/white matter boundary. The particles are allowed to propagate within the white matter mask, following simple rules that reflect the above list of hypotheses. After reaching a steady state, the white matter orientation distribution is reconstructed on a voxel-by-voxel basis, for each individual voxel based on the statistics of the particle paths crossing it. This is roughly the opposite of streamline tractography, where paths are sampled based on a distribution map. By implementing derived measures such as an anisotropy index, the resulting map can be quantitatively compared to empirical data. We are especially interested in multimodal effects that occur e.g. when two fibre bundles cross. We will validate our model on coronal slices of the vervet monkey, as an excellent empirical dataset is available [[^3]]. Proof­ of­ concept code is available via GitHub[[^4]].
+We propose to approach this question in the simple case of a 2D coronal slice. We use methods inspired by swarm intelligence [[2]]([http://www.red3d.com/cwr/boids/), and simulate a dynamical system where particles are instantiated at the gray matter/white matter boundary. The particles are allowed to propagate within the white matter mask, following simple rules that reflect the above list of hypotheses. After reaching a steady state, the white matter orientation distribution is reconstructed on a voxel-by-voxel basis, for each individual voxel based on the statistics of the particle paths crossing it. This is roughly the opposite of streamline tractography, where paths are sampled based on a distribution map. By implementing derived measures such as an anisotropy index, the resulting map can be quantitatively compared to empirical data. We are especially interested in multimodal effects that occur e.g. when two fibre bundles cross. We will validate our model on coronal slices of the vervet monkey, as an excellent empirical dataset is available [[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json). Proof­ of­ concept code is available via GitHub[[4]](https://github.com/aniv0s/FakeTensorImaging).
 
 ![image-title-here](/img/projects/project5.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 *Fig. Visualization of a DTI measurement of a human brain. Depicted are reconstructed fiber tracts that run through the mid-sagittal plane (source: Thomas Schultz, Wikipedia).*
 
-
 **A list of 1-5 key papers/materials summarising the subject:**
-* footnotes will be placed here. This line is necessary
-{:footnotes}
-[^1]: Frontier Research Topic "Wiring Principles of Cerebral Cortex" — [http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles)
-[^2]: Craig Reynolds' "Boids" — [http://www.red3d.com/cwr/boids/]()http://www.red3d.com/cwr/boids/]
-[^3]: Vervet monkey brain slice scanned using Polarized Light Imaging — [http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json)
-[^4]: [https://github.com/aniv0s/FakeTensorImaging](https://github.com/aniv0s/FakeTensorImaging)
+
+1. Frontier Research Topic "Wiring Principles of Cerebral Cortex" — [http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles)
+2. Craig Reynolds' "Boids" — [http://www.red3d.com/cwr/boids/]()http://www.red3d.com/cwr/boids/]
+3. Vervet monkey brain slice scanned using Polarized Light Imaging — [http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json)
+4. Github repo [https://github.com/aniv0s/FakeTensorImaging](https://github.com/aniv0s/FakeTensorImaging)
 
 **A list of requirements for taking part in the project:**
 
