--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -9,9 +9,9 @@ color: white
 1. [Functional connectivity research: can we find a common ground?](#connectivity) 
 2. [Detecting trypophobia triggers](#trypophobia)
 3. [Training a human-like movie evaluation system based on the semantic features of the storylines](#game)
-4. [Development of video game for studying joint action dynamics ](movies)
-5. [Hypothesis­-driven white matter tractography from T1­-weighted MRI images](whitematter)
-6. [One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask](neuroon)
+4. [Development of video game for studying joint action dynamics ](#movies)
+5. [Hypothesis­-driven white matter tractography from T1­-weighted MRI images](#whitematter)
+6. [One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask](#neuroon)
 7. [Building a brain-ageing biomarker using machine learning](#ageingbiomarker)
 8. [Building and using the “FlyPi”: the 3D-printed Neurobiology Lab](#flypi) 
 
